AWS_S3: upload-delete photo, swagger: add upload-delete photo
