# src/routers/user.router.ts
@@ -1,7 +1,11 @@
 import { Router } from 'express';
 
 import { userController } from '../controllers';
-import { authMiddleware, commonMiddleware } from '../middlewares';
+import {
+  authMiddleware,
+  commonMiddleware,
+  fileMiddleware,
+} from '../middlewares';
 import { UserValidator } from '../validators';
 
 const router = Router();
@@ -10,22 +14,35 @@ router.get('/', userController.findAll);
 
 router.get(
   '/:userId',
-  commonMiddleware.isIdValid('userId'),
   authMiddleware.checkAccessToken,
+  commonMiddleware.isIdValid('userId'),
   userController.getById,
 );
 router.patch(
   '/:userId',
+  authMiddleware.checkAccessToken,
   commonMiddleware.isIdValid('userId'),
   commonMiddleware.isBodyValid(UserValidator.update),
-  authMiddleware.checkAccessToken,
   userController.update,
 );
 router.delete(
   '/:userId',
-  commonMiddleware.isIdValid('userId'),
   authMiddleware.checkAccessToken,
+  commonMiddleware.isIdValid('userId'),
   userController.delete,
+);
+router.post(
+  '/:userId/photo',
+  authMiddleware.checkAccessToken,
+  commonMiddleware.isIdValid('userId'),
+  fileMiddleware.isPhotoValid,
+  userController.uploadPhoto,
+);
+router.delete(
+  '/:userId/photo',
+  authMiddleware.checkAccessToken,
+  commonMiddleware.isIdValid('userId'),
+  userController.deletePhoto,
 );
 
 export const userRouter = router;
